toolkit/mozapps/extensions/content/aboutaddons.css
:root {
  --section-width: 664px;
  --addon-icon-size: 32px;
  --z-index-sticky-container: 1;
  --z-index-popup: 10;
}

*|*[hidden] {
  display: none !important;
}

body {
  cursor: default;
  
  min-width: 500px;
}

.header-name {
  -moz-user-select: initial;
}

.sticky-container {
  background: var(--in-content-page-background);
  width: 100%;
  position: sticky;
  top: 0;
  z-index: var(--z-index-sticky-container);
}

.main-search {
  background: var(--in-content-page-background);
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-inline-start: 28px;
  padding-top: 20px;
  padding-bottom: 30px;
  max-width: var(--section-width);
}

search-addons > search-textbox {
  margin-inline-end: 0;
  width: 20em;
}

.search-label {
  margin-inline-end: 8px;
}

.main-heading {
  background: var(--in-content-page-background);
  display: flex;
  margin-inline-start: 28px;
  padding-bottom: 16px;
  max-width: var(--section-width);
}

.spacer {
  flex-grow: 1;
}

#updates-message {
  display: flex;
  align-items: center;
  margin-inline-end: 8px;
}

.back-button {
  margin-inline-end: 16px;
}



#page-header[current-param="plugin"] message-bar[warning-type="safe-mode"] {
  display: none;
}

#main {
  margin-inline-start: 28px;
  margin-bottom: 28px;
  max-width: var(--section-width);
}

global-warnings,
#abuse-reports-messages {
  margin-inline-start: 28px;
  max-width: var(--section-width);
}


message-bar-stack > * {
  margin-bottom: 8px;
}



.list-section-heading {
  font-size: 17px;
  font-weight: 600;
  margin-top: 32px;
  margin-bottom: 16px;
}


addon-list > section:first-of-type .list-section-heading {
  margin-top: 0;
}



.addon.card {
  margin-bottom: 16px;
}

addon-card:not([expanded]) > .addon.card[active="false"] {
  opacity: 0.6;
  transition: opacity 150ms, box-shadow 150ms;
}

addon-card:not([expanded])[panelopen] > .addon.card[active="false"],
addon-card:not([expanded]) > .addon.card[active="false"]:focus-within,
addon-card:not([expanded]) > .addon.card[active="false"]:hover {
  opacity: 1;
}

.addon.card:hover {
  box-shadow: var(--card-shadow);
}

addon-card:not([expanded]) > .addon.card:hover {
  box-shadow: var(--card-shadow-hover);
  cursor: pointer;
}

addon-card[expanded] .addon.card {
  padding-bottom: 0;
}

.addon-card-collapsed {
  display: flex;
}

addon-list addon-card > .addon.card {
  -moz-user-select: none;
}

.addon-card-message {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  margin: 8px calc(var(--card-padding) * -1) calc(var(--card-padding) * -1);
}

addon-card[expanded] .addon-card-message {
  border-radius: 0;
  margin-bottom: 0;
}


.card-heading-image {
  

  width: var(--section-width);
  

  height: calc(var(--section-width) * 92 / 680);
  object-fit: cover;
}

.card-heading-icon {
  flex-shrink: 0;
  width: var(--addon-icon-size);
  height: var(--addon-icon-size);
  margin-inline-end: 16px;
  -moz-context-properties: fill;
  fill: currentColor;
}

.card-contents {
  word-break: break-word;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.addon-name-container {
  
  margin-top: -3px;
  display: flex;
  align-items: center;
}

.addon-name {
  font-size: 16px;
  font-weight: 600;
  line-height: 22px;
  margin: 0;
  margin-inline-end: 8px;
}

.addon-name-link,
.addon-name-link:hover {
  color: var(--in-content-text-color);
  text-decoration: none;
}

.addon-badge {
  display: inline-block;
  margin-inline-end: 8px;
  width: 16px;
  height: 16px;
  background-size: 16px;
  background-repeat: no-repeat;
  background-position: center;
  flex-shrink: 0;
}

.addon-badge-private-browsing-allowed {
  background-image: url("chrome://browser/skin/private-browsing.svg");
}

.addon-badge-recommended {
  background-color: var(--orange-50);
  background-image: url("chrome://mozapps/skin/extensions/recommended.svg");
  background-size: 10px;
  border-radius: 8px;
  fill: #fff;
  -moz-context-properties: fill;
}

.theme-enable-button {
  min-width: auto;
  height: auto;
  font-size: 13px;
  min-height: auto;
  height: 24px;
  margin: 0;
}

.addon-description {
  font-size: 14px;
  line-height: 20px;
  color: var(--in-content-deemphasized-text);
  font-weight: 400;
}


addon-card:not([expanded]) .card-contents {
  

  width: 1px;
  white-space: nowrap;
}


addon-card:not([expanded]) .addon-name,
addon-card:not([expanded]) .addon-description {
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.page-options-menu {
  align-self: center;
}

.page-options-menu > .more-options-button {
  background-image: url("chrome://mozapps/skin/extensions/utilities.svg");
  width: 32px;
  height: 32px;
}


.recommended-heading {
  margin-bottom: 24px;
  margin-top: 48px;
}



recommended-addon-card .addon-description:not(:empty) {
  margin-top: 0.5em;
}

.disco-card-head {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.disco-addon-name {
  font-size: inherit;
  font-weight: normal;
  line-height: normal;
  margin: 0;
}

.disco-addon-author {
  font-size: 12px;
  font-weight: normal;
}

.disco-description-statistics {
  margin-top: 1em;
  display: grid;
  grid-template-columns: repeat(2, max-content);
  grid-column-gap: 2em;
  align-items: center;
}

.disco-cta-button {
  font-size: 14px;
  flex-shrink: 0;
  flex-grow: 0;
  align-self: baseline;
  margin-inline-end: 0;
}

.disco-cta-button[action="install-addon"]::before {
  content: "+";
  padding-inline-end: 4px;
}

.discopane-notice {
  margin: 24px 0;
}

.discopane-notice-content {
  align-items: center;
  display: flex;
  width: 100%;
}

.discopane-notice-content > span {
  flex-grow: 1;
  margin-inline-end: 4px;
}

.discopane-notice-content > button {
  flex-grow: 0;
  flex-shrink: 0;
}

.view-footer {
  text-align: center;
}

.view-footer-item {
  margin-top: 30px;
}

.privacy-policy-link {
  font-size: small;
}

addon-details {
  color: var(--in-content-deemphasized-text);
}

.addon-detail-description {
  margin: 16px 0;
}

.addon-detail-contribute {
  display: flex;
  padding: var(--card-padding);
  border: 1px solid var(--in-content-box-border-color);
  border-radius: var(--panel-border-radius);
  margin-bottom: var(--card-padding);
  flex-direction: column;
}

.addon-detail-contribute > label {
  font-style: italic;
}

.addon-detail-contribute-button {
  -moz-context-properties: fill;
  fill: currentColor;
  background-image: url("chrome://global/skin/icons/heart.svg");
  background-repeat: no-repeat;
  background-position: 8px;
  padding-inline-start: 28px;
  margin-top: var(--card-padding);
  margin-bottom: 0;
  align-self: flex-end;
}

.addon-detail-contribute-button:dir(rtl) {
  background-position-x: right 8px;
}

.addon-detail-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid var(--in-content-box-border-color);
  margin: 0 calc(var(--card-padding) * -1);
  padding: var(--card-padding);
  color: var(--in-content-text-color);
}

.addon-detail-row.addon-detail-help-row {
  display: block;
  color: var(--in-content-deemphasized-text);
  padding-top: 4px;
  padding-bottom: var(--card-padding);
  border: none;
}

.addon-detail-row-has-help {
  padding-bottom: 0;
}

.addon-detail-row input[type="checkbox"] {
  margin: 0;
}

.addon-detail-rating {
  display: flex;
}

.addon-detail-rating > a {
  margin-inline-start: 8px;
}

.more-options-button {
  min-width: auto;
  min-height: auto;
  width: 24px;
  height: 24px;
  margin: 0;
  margin-inline-start: 8px;
  -moz-context-properties: fill;
  fill: currentColor;
  background-image: url("chrome://global/skin/icons/more.svg");
  background-repeat: no-repeat;
  background-position: center center;
  
  padding: 1px;
  display: flex;
  justify-content: flex-end;
}

.more-options-button-badged::after {
  content: "";
  display: block;
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background: var(--blue-50);
}

panel-item {
  -moz-context-properties: fill;
  fill: currentColor;
}

panel-item[action="remove"] {
  --icon: url("chrome://global/skin/icons/delete.svg");
}

panel-item[action="install-update"] {
  --icon: url("chrome://global/skin/icons/update-icon.svg");
}

panel-item[action="report"] {
  --icon: url(chrome://global/skin/icons/warning.svg);
}

panel-item-separator {
  display: block;
  height: 1px;
  background: var(--in-content-box-border-color);
  padding: 0;
  margin: 6px 0;
}

.hide-amo-link .amo-link-container {
  display: none;
}

.button-link {
  min-height: auto;
  background: none !important;
  padding: 0;
  margin: 0;
  color: var(--in-content-link-color) !important;
  cursor: pointer;
  border: none;
}

.button-link:hover {
  color: var(--in-content-link-color-hover) !important;
  text-decoration: underline;
}

.button-link:active {
  color: var(--in-content-link-color-active) !important;
  text-decoration: none;
}

.inline-options-stack {
  
  min-height: 250px;
  width: 100%;
  background-color: white;
  margin-block: 4px;
}

addon-permissions-list > .addon-detail-row:first-of-type {
  border-top: none;
}

.deck-tab-group {
  margin-top: 8px;
  
  margin-inline: calc(var(--card-padding) * -1);
}

panel-list {
  font-size: 13px;
}

