Bug 1596858 - Different spacing above Enabled and Disabled headers while there is no enabled add-on r=mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D67270

UltraBlame original commit: e8f6b2875121f52e99dd23f8a041eba90b70e629

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -101,13 +101,11 @@ message-bar-stack > * {
 .list-section-heading {
   font-size: 17px;
   font-weight: 600;
-  margin-top: 32px;
   margin-bottom: 16px;
 }
 
-
-addon-list > section:first-of-type .list-section-heading {
-  margin-top: 0;
+.section {
+  margin-bottom: 32px;
 }
 
 
